# VIAME

./: CMakeLists.txt
CMake/: common_macros.cmake  setup_viame.sh.in
examples/: CMakeLists.txt
examples/benthos_detect/: CMakeLists.txt  benthos_detect.pipe  input_list.txt  run_benthos_detect.sh
plugins/: CMakeLists.txt
plugins/benthos_detect/: CMakeLists.txt  ProcessImage_sri.py  __init__.py
